<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MapsFragment begin -->
    <string name="search_query_hint">Enter request</string>
    <string name="device_coordinates_button_content_description">Current location</string>
    <string name="filter_screen_button_content_description">Filter screen</string>
    <!-- MapsFragment end -->

    <!-- Common dialogs begin -->
    <string name="dialogs_positive_button">OK</string>
    <!-- Common dialogs end -->

    <!-- Rationale dialog begin -->
    <string name="rationale_title">Access to permission</string>
    <string name="rationale_message">Location permission is required to update device location.
        If you want to grant it, please, restart the application</string>
    <!-- Rationale dialog end -->

    <!-- NotGrantedNoAsk dialog begin -->
    <string name="not_granted_no_ask_title">Access to permission</string>
    <string name="not_granted_no_ask_message">Location permission is not granted.
        Device location services are not available</string>
    <!-- NotGrantedNoAsk dialog end -->

    <!-- locationNotAvailable dialog begin -->
    <string name="location_not_available_title">Location issues</string>
    <string name="location_not_available_message">Current location is not available.
        Check your settings</string>
    <!-- locationNotAvailable dialog end -->

    <!-- NoPlayServices dialog begin -->
    <string name="no_play_services_title">Google Play services issues</string>
    <string name="no_play_services_message">Google Play services are not available on this device. Location will not work</string>
    <!-- NoPlayServices dialog end -->

    <!-- MapsFragmentViewModel begin -->
    <string name="charge_station_title">Charge station: %1$s</string>
    <!-- MapsFragmentViewModel end -->

    <!-- Messages begin -->
    <string name="message_location_marker_title">Current location: %1$s</string>
    <string name="message_permission_error">Location permission is not granted!</string>
    <string name="message_location_is_not_available">Location is not available!</string>
    <string name="message_location_error">Location error!</string>
    <string name="message_google_play_services_not_present">Google Play services are not available!</string>
    <string name="message_empty_query">Empty query!</string>
    <string name="message_address_not_found">Address is not found!</string>
    <string name="message_unknown_address">Unknown address!</string>
    <string name="message_unknown_marker">Unknown marker!</string>
    <string name="message_stations_request_error">Station request error!</string>
    <string name="message_address_search_error">Address search error!</string>
    <string name="message_location_is_available">Location is available!</string>
    <!-- Messages end -->

    <!-- FiltersFragment begin -->
    <string name="filters_header">Filters</string>
    <string name="filters_connectors">Chosen connectors</string>
    <string name="filters_switch_all_off"><u>Switch all off</u></string>
    <!-- FiltersFragment end -->

</resources>